feat(info): check plugin info sources on initialisation

--- a/test/resources/test.bib
+++ b/test/resources/test.bib
@@ -1,10 +1,34 @@
 % Encoding: UTF8
 
-@ARTICLE{test2023,
-    AUTHOR = {T. T. Test},
-    TITLE = {Plugin test},
-    YEAR = {2023},
-    JOURNAL = {Test},
-    VOLUME = {1},
-    PAGES = {10-11}
+@article{test2023,
+    title = {Plugin test},
+    author = {T. T. Test},
+    year = {2023},
+    journal = {Test},
+    volume = {1},
+    pages = {10-11}
+}
+
+@inbook{CitekeyInbook,
+    title = "Photosynthesis",
+    author = "Lisa A. Urry and Michael L. Cain and Steven A. Wasserman and Peter V. Minorsky and Jane B. Reece",
+    year = "2016",
+    booktitle = "Campbell Biology",
+    pages = "187--221"
+}
+
+@inproceedings{CitekeyInproceedings,
+    title = "Studying mobile context-aware social services in the wild",
+    author = "Holleis, Paul and Wagner, Matthias and Koolwaaij, Johan",
+    year = 2010,
+    booktitle = "Proc. of the 6th Nordic Conf. on Human-Computer Interaction",
+    pages = "207--216",
+}
+
+@misc{CitekeyMisc,
+    title = "Pluto: The 'Other' Red Planet",
+    author = "{NASA}",
+    year = 2015,
+    note = "Accessed: 2018-12-06",
+    url = "https://www.nasa.gov/nh/pluto-the-other-red-planet",
 }
